# 100Languages

./: README.md
scripts/: Create_Folders.ps1  Folder_Names.csv  README.md
scripts/challenge_fetcher/: main.py  pyproject.toml
scripts/challenge_fetcher/challenge_fetcher/: arguments.py  challenge.py  exporter.py  parser.py  scraper.py
scripts/challenge_fetcher/tests/: test_file_name_sanitiser.py  test_known_challenges.py
src/001_Multiples_of_3_or_5/: .justfile  README.md  problem_1.fnl  shell.nix
src/002_Even_Fibonacci_Numbers/: .gitignore  .justfile  README.md  problem_2  problem_2.s  shell.nix
src/003_Largest_Prime_Factor/: Integer-hundredLanguages.st  README.md
src/004_Largest_Palindrome_Product/: .justfile  README.md  problem_4.s7  s7.c  s7.h
src/005_Smallest_Multiple/: .justfile  README.md  problem_5.vhdl  problem_5_tb.vhdl  shell.nix
src/006_Sum_Square_Difference/: .justfile  README.md  init.gdb  problem_6  problem_6.s  shell.nix
src/007_10001st_Prime/: .gitignore  .justfile  README.md  problem_7.cpp  shell.nix
src/008_Largest_Product_in_a_Series/: .justfile  README.md  problem_8.erl  shell.nix
src/009_Special_Pythagorean_Triplet/: .justfile  README.md  problem_9.sql  shell.nix
src/010_Summation_of_Primes/: .justfile  README.md  problem_10.f90  shell.nix
src/011_Largest_Product_in_a_Grid/: .justfile  README.md  problem_11.roc  shell.nix
src/012_Highly_Divisible_Triangular_Number/: .justfile  README.md  problem_12.ha  shell.nix  test.lua
src/013_Large_Sum/: README.md
src/014_Longest_Collatz_Sequence/: README.md
(+92 files in other folders)
